next-themes dark mode & favicon WIP, fix wrong example solutions

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,6 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
   --player-red: var(--bs-red);
   --player-blue: var(--bs-blue);
@@ -14,20 +12,13 @@
   --player-yellow: var(--bs-yellow);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) { */
+[data-theme='dark'] {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--bs-body-bg);
 }
